Fix menu items overflow, closes #140

--- a/resources/assets/sass/components/_LeftNav.scss
+++ b/resources/assets/sass/components/_LeftNav.scss
@@ -129,7 +129,7 @@
 
       &--expanded {
         .SharpLeftNav__list--nested {
-          max-height: 20rem;
+          max-height: 50rem;
           transition: $transition--base;
           overflow: inherit;
           opacity: 1;
